// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`function-block.cdc 1`] = `
====================================options=====================================
parsers: ["cadence"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
pub fun block(a: Int): String{
    return 42
}

=====================================output=====================================
pub fun block(a: Int): String {}


================================================================================
`;

exports[`function-docstring.cdc 1`] = `
====================================options=====================================
parsers: ["cadence"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/// includeDocstring
///
/// message: String - message to use inside method block
/// prettier shall include docstring together with method declaration
pub fun includeDocstring(message: String){}

=====================================output=====================================
/// includeDocstring
///
/// message: String - message to use inside method block
/// prettier shall include docstring together with method declaration
pub fun includeDocstring(message: String) {}


================================================================================
`;

exports[`function-signature.cdc 1`] = `
====================================options=====================================
parsers: ["cadence"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
 pub  fun       hello() { }

access(contract) fun accessContract(): String {   }
access(account) fun accessAccount(  a: Int):  @Vault {   }
access(account) fun accessAccount(  amount: Int, message: String, to: @Vault):  @Vault {   }

=====================================output=====================================
pub fun hello() {}
access(contract) fun accessContract(): String {}
access(account) fun accessAccount(a: Int): @Vault {}
access(account) fun accessAccount(amount: Int, message: String, to: @Vault): @Vault {}


================================================================================
`;

exports[`function-with-import.cdc 1`] = `
====================================options=====================================
parsers: ["cadence"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import Hello from 0x01

pub fun main():String{
    return Hello.message
}

=====================================output=====================================
import Hello from 0x1

pub fun main(): String {}


================================================================================
`;
